Fixed middle alignment of short text + added nbsp

--- a/styles.css
+++ b/styles.css
@@ -50,10 +50,10 @@ html {
 
 .home-div-1a {
     align-self: center;
-    width: 50%;
     text-align: center;
     padding: 4rem;
     line-height: 9rem;
+    padding: 0 25%;
 
 }
 .navbar-collapse {
